--- a/blocks/businesscases/Sneha.html
+++ b/blocks/businesscases/Sneha.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Business Cases Aligned with SDGs</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Lora:wght@400;700&display=swap" rel="stylesheet">
   <style>
     /* General Styles */
     body {
       font-family: 'Poppins', sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #e5f1f6; /* Light blue background */
+      background-color: #f0f4f8; /* Soft light blue background */
       color: #333;
     }
 
@@ -21,16 +21,17 @@
       padding: 20px;
       background: #ffffff; /* White background for content */
       box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-      border-radius: 8px;
+      border-radius: 10px;
     }
 
     h1.main {
       text-align: center;
       color: #ffffff;
-      background-color: #00bcd4; /* Teal background for the main heading */
-      border-radius: 10rem;
+      background-color: #00796b; /* Teal background for the main heading */
+      border-radius: 50px;
       margin-bottom: 30px;
-      font-family: 'Roboto', sans-serif;
+      padding: 10px 20px;
+      font-family: 'Lora', serif;
     }
 
     .section {
@@ -55,7 +56,8 @@
       margin-bottom: 20px;
       padding: 15px;
       border: 1px solid #ccc;
-      border-radius: 5px;
+      border-radius: 10px;
+      background-color: #f9f9f9; /* Light grey background */
       transition: transform 0.3s ease, box-shadow 0.3s ease;
     }
 
@@ -65,7 +67,7 @@
     }
 
     .strategy h3 {
-      font-size: 18px;
+      font-size: 20px;
       color: #00796b; /* Teal color for strategy headings */
       margin-bottom: 10px;
       font-weight: 600;
@@ -108,7 +110,7 @@
     .navbar {
       position: sticky;
       top: 0;
-      background-color: #00bcd4; /* Teal background for navbar */
+      background-color: #00796b; /* Teal background for navbar */
       width: 100%;
       z-index: 1000;
       padding: 1rem 1rem;
@@ -139,7 +141,7 @@
     }
 
     .nav-list a:hover {
-      background-color: #0097a7; /* Slightly darker teal on hover */
+      background-color: #004d40; /* Slightly darker teal on hover */
       transform: scale(1.02);
       box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
       transition: transform 0.2s, box-shadow 0.2s;
@@ -147,13 +149,13 @@
     }
 
     h2.code {
-      font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+      font-family: 'Lora', serif;
       background-color: #ff7043; /* Coral background for code section */
       text-align: center;
       font-style: oblique;
-      border-radius: 4rem;
+      border-radius: 30px;
       display: inline-flex;
-      padding: 0.7rem 1rem;
+      padding: 10px 20px;
     }
 
     h2.code:hover {
@@ -200,31 +202,30 @@
   </nav>
 
   <div class="container">
-    <button onclick="window.history.back();" style="background-color: #00bcd4; color: white; border: none; padding: 10px 20px; font-size: 1rem; cursor: pointer; border-radius: 5px; margin-bottom: 20px;">Back</button>
+    <button onclick="window.history.back();" style="background-color: #00796b; color: white; border: none; padding: 10px 20px; font-size: 1rem; cursor: pointer; border-radius: 5px; margin-bottom: 20px;">Back</button>
     <h1 class="main">Business Cases with SDGs</h1>
 
     <div class="Overcrowding of tourist places of attraction">
-  <h2>Overcrowding of tourist places of attraction</h2>
-  <div class="strategy">
-    <h3>SDG Target 8</h3>
-    <p><strong>Focus:</strong> Sustainable Tourism and Responsible Consumption</p>
-    <p><strong>SDG Indicator 8.9.1:</strong> Tourism direct GDP as a proportion of total GDP and in growth rate.</p>
-  </div>
-</div>
+      <h2>Overcrowding of tourist places of attraction</h2>
+      <div class="strategy">
+        <h3>SDG Target 8</h3>
+        <p><strong>Focus:</strong> Sustainable Tourism and Responsible Consumption</p>
+        <p><strong>SDG Indicator 8.9.1:</strong> Tourism direct GDP as a proportion of total GDP and in growth rate.</p>
+      </div>
+    </div>
 
-<div class="Inefficient Travel and Accommodation Bookings">
-  <h2>Inefficient Travel and Accommodation Bookings</h2>
-  <div class="strategy">
-    <h3>SDG Target 8</h3>
-    <p><strong>Focus:</strong> Sustainable Infrastructure Development</p>
-    <p><strong>SDG Indicator 8.2.1:</strong> Annual growth rate of real GDP per employed person.</p>
-  </div>
-</div>
-    
+    <div class="Inefficient Travel and Accommodation Bookings">
+      <h2>Inefficient Travel and Accommodation Bookings</h2>
+      <div class="strategy">
+        <h3>SDG Target 8</h3>
+        <p><strong>Focus:</strong> Sustainable Infrastructure Development</p>
+        <p><strong>SDG Indicator 8.2.1:</strong> Annual growth rate of real GDP per employed person.</p>
+      </div>
+    </div>
 
-  <div class="center-link">
-    <a href="../businesscases/Snehacode.cpp" class="code">Click Here for Code Implementation</a>
+    <div class="center-link">
+      <a href="../businesscases/Snehacode.cpp" class="code">Click Here for Code Implementation</a>
+    </div>
   </div>
 </body>
 </html>
-
