--- a/blocks/home/home.html
+++ b/blocks/home/home.html
@@ -152,4 +152,21 @@
       <p>To create a city design and solve the real world problems</p>
       <dl>
         <dt>Course Name</dt>
-        <dd>Design and Analysis
+        <dd>Design and Analysis of Algorithms</dd>
+
+        <dt>Course Code</dt>
+        <dd>24ECAP205</dd>
+
+        <dt>Course Instructor</dt>
+        <dd>Ms. Vijaylaxmi V S</dd>
+
+        <dt>University</dt>
+        <dd>KLE Technological University</dd>
+
+        <dt>Portfolio Topic/Domain</dt>
+        <dd>City Design</dd>
+      </dl>
+    </div>
+  </div>
+</body>
+</html>
