--- a/Courseintroduction.html
+++ b/Courseintroduction.html
@@ -1,55 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Course Introduction</title>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;600&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Raleway', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f9;
+            background-color: #f0f8ff; /* Alice Blue background */
             color: #333;
         }
+
         h2 {
-            background-color: #007BFF;
+            background-color: #4caf50; /* Green background for header */
             color: white;
             padding: 15px;
             text-align: center;
+            font-family: 'Roboto', serif;
+            border-radius: 8px;
+            margin-bottom: 20px;
         }
+
         .course-content {
             max-width: 900px;
             margin: 20px auto;
             padding: 20px;
             background-color: white;
-            border-radius: 8px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
         }
-        p, ul, ol {
+
+        p,
+        ul,
+        ol {
             line-height: 1.6;
         }
-        ul, ol {
+
+        ul,
+        ol {
             margin-left: 20px;
         }
-        ul li, ol li {
+
+        ul li,
+        ol li {
             margin-bottom: 10px;
         }
+
         .section-title {
-            font-size: 1.2em;
+            font-size: 1.4em;
             font-weight: bold;
-            color: #007BFF;
+            color: #4caf50; /* Green color for section titles */
             margin-top: 20px;
+            font-family: 'Roboto', serif;
         }
+
         .section-content {
             margin-bottom: 20px;
         }
+
         .highlight {
-            color: #d9534f;
+            color: #ff5722; /* Deep orange color for highlights */
             font-weight: bold;
         }
     </style>
 </head>
+
 <body>
 
     <h2>Course Introduction: Design and Analysis of Algorithms</h2>
@@ -125,4 +144,5 @@
     </div>
 
 </body>
+
 </html>
