--- a/introduction.html
+++ b/introduction.html
@@ -1,65 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Course Project Introduction</title>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f9;
+            font-family: 'Nunito', sans-serif;
+            background-color: #f0f8ff; /* Alice Blue background */
             color: #333;
             margin: 0;
             padding: 0;
         }
+
         h2 {
-            background-color: #007BFF;
+            background-color: #2196F3; /* Blue background for header */
             color: white;
             padding: 15px;
             text-align: center;
-            margin: 0;
+            font-family: 'Roboto', serif;
+            border-radius: 8px;
+            margin-bottom: 20px;
         }
+
         .container {
             max-width: 1000px;
             margin: 30px auto;
             padding: 20px;
             background-color: white;
-            border-radius: 8px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
         }
+
         .section-title {
             font-size: 1.4em;
             font-weight: bold;
-            color: #007BFF;
+            color: #2196F3; /* Blue color for section titles */
             margin-top: 20px;
+            font-family: 'Roboto', serif;
         }
+
         .section-content {
             margin-left: 20px;
             margin-bottom: 20px;
         }
+
         ul, ol {
             margin-left: 30px;
             line-height: 1.6;
         }
+
         ul li, ol li {
             margin-bottom: 10px;
         }
+
         p {
             line-height: 1.6;
         }
+
         .highlight {
-            color: #d9534f;
+            color: #e91e63; /* Pink color for highlights */
             font-weight: bold;
         }
+
         a {
-            color: #007BFF;
+            color: #2196F3;
             text-decoration: none;
         }
+
         a:hover {
             text-decoration: underline;
         }
     </style>
 </head>
+
 <body>
 
     <h2>Course Project Introduction</h2>
@@ -71,19 +87,14 @@
             <p class="section-title">Strategic Insights:</p>
             <div class="section-content">
                 <ul>
-                    <li><strong>Technological Solutions:</strong> AI-Driven Analytics: Predict tourist flow and optimize attraction capacity to reduce overcrowding.
-
-IoT-Enabled Platforms: Enhance real-time tracking of tourist transport and safety.
-
-Mobile Applications: Simplify booking, itinerary planning, and translation for tourists.</li>
-                    <li><strong>Success Stories:</strong> Smart City Tourism Initiatives: Cities leveraging AI to distribute tourist traffic effectively.
-
-Integrated Booking Platforms: Companies have successfully streamlined the booking process, reducing inefficiencies.</li>
-                    <li><strong>Challenges:</strong> Data Accuracy: Maintaining updated data on tourist locations and preferences.
-
-Implementation Costs: Investing in smart technologies across multiple destinations.
-
-Cultural Barriers: Overcoming language and communication hurdles.</li>
+                    <li><strong>Technological Solutions:</strong> AI-Driven Analytics: Predict tourist flow and optimize attraction capacity to reduce overcrowding.</li>
+                    <li>IoT-Enabled Platforms: Enhance real-time tracking of tourist transport and safety.</li>
+                    <li>Mobile Applications: Simplify booking, itinerary planning, and translation for tourists.</li>
+                    <li><strong>Success Stories:</strong> Smart City Tourism Initiatives: Cities leveraging AI to distribute tourist traffic effectively.</li>
+                    <li>Integrated Booking Platforms: Companies have successfully streamlined the booking process, reducing inefficiencies.</li>
+                    <li><strong>Challenges:</strong> Data Accuracy: Maintaining updated data on tourist locations and preferences.</li>
+                    <li>Implementation Costs: Investing in smart technologies across multiple destinations.</li>
+                    <li>Cultural Barriers: Overcoming language and communication hurdles.</li>
                 </ul>
             </div>
         </div>
@@ -92,18 +103,14 @@ Cultural Barriers: Overcoming language and communication hurdles.</li>
             <p class="section-title">City Design: Approach to Smart City Design</p>
             <div class="section-content">
                 <ul>
-                    <li><strong>Modernizing Existing Infrastructure:</strong> Centralizing travel and accommodation booking systems.
-
-Implementing dynamic pricing models to balance demand for accommodations and attractions.</li>
-                    <li><strong>Implementing Smart Technologies:</strong> Using AI systems to recommend optimal itineraries and translate languages in real-time.
-
-Employing predictive analytics to anticipate tourist behavior and preferences.</li>
-                    <li><strong>Simulation and Testing:</strong> Creating virtual models to simulate tourist flows and optimize city planning.
-
-Stress-testing platforms for high tourist seasons.</li>
-                    <li><strong>Citizen-Centric Design:</strong> Ensuring platforms are accessible and user-friendly for all demographics.
-
-Providing multilingual support and mobile-friendly interfaces for global accessibility.</li>
+                    <li><strong>Modernizing Existing Infrastructure:</strong> Centralizing travel and accommodation booking systems.</li>
+                    <li>Implementing dynamic pricing models to balance demand for accommodations and attractions.</li>
+                    <li><strong>Implementing Smart Technologies:</strong> Using AI systems to recommend optimal itineraries and translate languages in real-time.</li>
+                    <li>Employing predictive analytics to anticipate tourist behavior and preferences.</li>
+                    <li><strong>Simulation and Testing:</strong> Creating virtual models to simulate tourist flows and optimize city planning.</li>
+                    <li>Stress-testing platforms for high tourist seasons.</li>
+                    <li><strong>Citizen-Centric Design:</strong> Ensuring platforms are accessible and user-friendly for all demographics.</li>
+                    <li>Providing multilingual support and mobile-friendly interfaces for global accessibility.</li>
                 </ul>
             </div>
         </div>
@@ -125,13 +132,12 @@ Providing multilingual support and mobile-friendly interfaces for global accessi
         <div class="section">
             <p class="section-title">Problem Definition:</p>
             <div class="section-content">
-                <p>As the tourism industry grows, it faces challenges such as overcrowding, inefficient booking processes, language barriers, and safety concerns. These issues hinder the overall experience of travelers and impact the efficiency of tourism operations.
-
-Our project seeks to address these problems through advanced technologies that streamline booking systems, optimize tourist flow, and enhance safety measures. The goal is to provide an exceptional travel experience while ensuring sustainable tourism practices.</p>
+                <p>As the tourism industry grows, it faces challenges such as overcrowding, inefficient booking processes, language barriers, and safety concerns. These issues hinder the overall experience of travelers and impact the efficiency of tourism operations.</p>
+                <p>Our project seeks to address these problems through advanced technologies that streamline booking systems, optimize tourist flow, and enhance safety measures. The goal is to provide an exceptional travel experience while ensuring sustainable tourism practices.</p>
             </div>
         </div>
-
     </div>
 
 </body>
+
 </html>
