--- a/blocks/learningref/teamlearning.html
+++ b/blocks/learningref/teamlearning.html
@@ -5,19 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Learning Reflections</title>
-    <link rel="stylesheet" href="../../teamcase.css">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background-color: #f9f9f9; /* Light background for the page */
+            font-family: 'Open Sans', sans-serif;
+            background-color: #f0f8ff; /* Alice Blue background */
             color: #333; /* Dark text for readability */
             margin: 0;
             padding: 0;
         }
 
         header {
-            background-color: #007BFF; /* Blue background for header */
+            background-color: #4CAF50; /* Green background for header */
             padding: 1rem;
+            border-radius: 0 0 10px 10px;
         }
 
         .navbar {
@@ -45,15 +46,16 @@
             margin: 2rem auto;
             padding: 2rem;
             background-color: #ffffff;
-            border-radius: 8px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
         }
 
         h1 {
             text-align: center;
-            color: #007BFF; /* Blue color for headings */
+            color: #4CAF50; /* Green color for headings */
             font-size: 2.5rem;
             margin-bottom: 1.5rem;
+            font-family: 'Playfair Display', serif;
         }
 
         h2 {
@@ -66,7 +68,7 @@
         .members {
             display: block;
             text-align: center;
-            color: #007BFF; /* Blue for the link */
+            color: #4CAF50; /* Green for the link */
             font-size: 1.1rem;
             margin-top: 1rem;
         }
@@ -108,5 +110,3 @@
 </body>
 
 </html>
-
-
