--- a/index.html
+++ b/index.html
@@ -162,6 +162,11 @@
                 <div class="member-info">
                     <p class="name">Disha Sirsikar</p>
                     <p>USN: 01FE23BCS187</p>
+                      <div class="center-link">
+                          <a href="https://Disha0029.github.io/disha.github.io/">Click Here to visit Disha's GitHub Page</a>
+
+                     </div>
+
                     <p>ROLL NO: 245</p>
                 </div>
             </div>
@@ -171,18 +176,14 @@
                 <div class="member-info">
                     <p class="name">Prateeksha P Shet </p>
                     <p>USN: 01FE23BCS177</p>
+                       <div class="center-link">
+                          <a href="https://Prateeksha-ps.github.io/prateeksha.github.io/">Click Here to visit Preeti's GitHub Page</a>
+                     </div>
                     <p>ROLL NO: 223</p>
                 </div>
             </div>
         </div>
     </section>
 
-    <section>
-        <h2 style="color:rgb(34, 34, 211)">🌐 Find Me Online</h2>
-        <ul>
-            <li><a href="https://github.com/snehalb2005" target="_blank">GitHub</a></li>
-            <li><a href="https://linkedin.com/in/your-linkedin-profile" target="_blank">LinkedIn</a></li>
-        </ul>
-    </section>
 </body>
 </html>
