--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                     <p class="name">Prateeksha P Shet </p>
                     <p>USN: 01FE23BCS177</p>
                        <div class="center-link">
-                          <a href="https://Prateeksha-ps.github.io/prateeksha.github.io/">Click Here to visit Preeti's GitHub Page</a>
+                          <a href="https://Prateeksha-ps.github.io/prateeksha.github.io/">Click Here to visit Prateeksha's GitHub Page</a>
                      </div>
                     <p>ROLL NO: 223</p>
                 </div>
