--- a/index.html
+++ b/index.html
@@ -1,189 +1,224 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Poppins', sans-serif;
-            background-color: #e3f2fd; /* Light blue */
-            color: #2c3e50; /* Dark blue-gray for text */
-            margin: 0;
-            padding: 0;
-        }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Portfolio</title>
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;600&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Raleway', sans-serif;
+      background-color: #eaeff2; /* Soft grey blue background */
+      color: #2c3e50; /* Dark blue-gray for text */
+      margin: 0;
+      padding: 0;
+    }
 
-        .navbar {
-            background-color: #2980b9; /* Blue */
-            padding: 1rem;
-        }
+    .navbar {
+      background-color: #34495e; /* Dark grey blue */
+      padding: 1rem;
+    }
 
-        .nav-list {
-            list-style: none;
-            display: flex;
-            justify-content: flex-start;
-            gap: 1rem;
-            margin: 0;
-            padding: 0;
-        }
+    .nav-list {
+      list-style: none;
+      display: flex;
+      justify-content: center;
+      gap: 2rem;
+      margin: 0;
+      padding: 0;
+    }
 
-        .nav-list li a {
-            text-decoration: none;
-            color: #ecf0f1; /* Light gray text */
-            font-weight: 600;
-        }
+    .nav-list li a {
+      text-decoration: none;
+      color: #ecf0f1; /* Light gray text */
+      font-weight: 600;
+      padding: 0.5rem 1rem;
+      border-radius: 5px;
+      transition: background-color 0.3s ease, color 0.3s ease;
+    }
 
-        .nav-list li a:hover {
-            color: #f39c12; /* Yellow for hover */
-        }
+    .nav-list li a:hover {
+      color: #16a085; /* Teal for hover */
+      background-color: #ecf0f1; /* Light background on hover */
+    }
 
-        section h2 {
-            color: #2980b9; /* Blue for headings */
-            text-align: center;
-            margin: 1rem 0;
-        }
+    section h2 {
+      color: #34495e; /* Dark grey blue for headings */
+      text-align: center;
+      margin: 1rem 0;
+      font-family: 'Playfair Display', serif;
+      font-size: 2rem;
+    }
 
-        section ul {
-            padding: 1rem 2rem;
-            background-color: #ffffff; /* White background for list */
-            border-radius: 8px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        }
+    section ul {
+      padding: 1rem 2rem;
+      background-color: #ffffff; /* White background for list */
+      border-radius: 12px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      margin: 1.5rem 0;
+    }
 
-        section ul li {
-            margin-bottom: 0.5rem;
-        }
+    section ul li {
+      margin-bottom: 1rem;
+      font-size: 1.1rem;
+    }
 
-        section ul li strong {
-            color: #f39c12; /* Yellow for strong text */
-        }
+    section ul li strong {
+      color: #16a085; /* Teal for strong text */
+    }
 
-        .custom-link {
-            color: #2980b9; /* Blue */
-            text-decoration: none;
-            font-weight: bold;
-        }
+    .custom-link {
+      color: #34495e; /* Dark grey blue */
+      text-decoration: none;
+      font-weight: bold;
+    }
 
-        .custom-link:hover {
-            color: #f39c12; /* Yellow hover */
-        }
+    .custom-link:hover {
+      color: #16a085; /* Teal hover */
+    }
 
-        blockquote {
-            font-style: italic;
-            color: #2980b9; /* Blue */
-            border-left: 4px solid #f39c12; /* Yellow border */
-            margin: 2rem;
-            padding-left: 1rem;
-        }
+    blockquote {
+      font-style: italic;
+      color: #34495e; /* Dark grey blue */
+      border-left: 4px solid #16a085; /* Teal border */
+      margin: 2rem;
+      padding-left: 1rem;
+      background-color: #ecf0f1; /* Light grey background */
+      border-radius: 5px;
+      padding: 1rem;
+    }
 
-        .profile-pic {
-            display: block;
-            width: 150px;
-            height: 150px;
-            border-radius: 50%;
-            margin: 1rem auto;
-            border: 4px solid #f39c12; /* Yellow border for image */
-        }
+    .profile-pic {
+      display: block;
+      width: 150px;
+      height: 150px;
+      border-radius: 50%;
+      margin: 1rem auto;
+      border: 4px solid #16a085; /* Teal border for image */
+    }
 
-        .name {
-            text-align: center;
-            color: #2980b9; /* Blue for name */
-            font-weight: bold;
-            font-size: 1.2rem;
-        }
+    .name {
+      text-align: center;
+      color: #34495e; /* Dark grey blue for name */
+      font-weight: bold;
+      font-size: 1.3rem;
+      font-family: 'Playfair Display', serif;
+    }
 
-        section p {
-            text-align: center;
-            margin: 0.5rem 0;
-            color: #333; /* Standard text color */
-        }
+    section p {
+      text-align: center;
+      margin: 0.5rem 0;
+      color: #2c3e50; /* Standard text color */
+      font-size: 1.1rem;
+    }
 
-        .center-link {
-            text-align: center;
-            margin: 1rem 0;
-        }
-    </style>
+    .center-link {
+      text-align: center;
+      margin: 1.5rem 0;
+    }
+
+    .team-container {
+      display: flex;
+      justify-content: center;
+      gap: 2rem;
+      flex-wrap: wrap;
+    }
+
+    .team-member {
+      text-align: center;
+      max-width: 300px;
+      padding: 1rem;
+      background-color: #ffffff;
+      border-radius: 12px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    }
+
+    .team-member img {
+      margin-bottom: 1rem;
+    }
+
+    .member-info {
+      margin-top: 0.5rem;
+    }
+  </style>
 </head>
+
 <body>
-    <nav class="navbar">
-        <ul class="nav-list">
-            <li><a href="/sneha.github.io/blocks/home/home.html">Home</a></li>
-            <li><a href="/sneha.github.io/introduction.html">Project Introduction</a></li>
-            <li><a href="/sneha.github.io/blocks/learningref/teamlearning.html">Learning Reflections</a></li>
-        </ul>
-    </nav>
+  <nav class="navbar">
+    <ul class="nav-list">
+      <li><a href="/sneha.github.io/blocks/home/home.html">Home</a></li>
+      <li><a href="/sneha.github.io/introduction.html">Project Introduction</a></li>
+      <li><a href="/sneha.github.io/blocks/learningref/teamlearning.html">Learning Reflections</a></li>
+    </ul>
+  </nav>
 
-    <section>
-        <h2>City Design</h2>
-        <ul>
-            <li><strong>Name of the city:</strong> <span>"HAMSAGARH"</span></li>
-            <li>Our city plan for HAMSAGARH, situated in RAJKOT district in GUJART, features a well-rounded and sustainable urban design focusing on infrastructure, public services,monument preservation and environmental conservation.</li>
-            <li>
-                <center>
-                    <img src="https://raw.githubusercontent.com/snehalb2005/sneha.github.io/main/images/City.jpeg" alt="City Plan Image" width="80%">
-                </center>
-            </li>
-        </ul>
-        <section class="description">
-            <div class="link-section">
-                <a class="custom-link" href="/sneha.github.io/introduction.html">Click Here to see the course project introduction</a>
-            </div>
-        </section>
-        <section class="description">
-            <div class="link-section">
-                <a class="custom-link" href="/sneha.github.io/blocks/businesscases/business.html">Click Here to see the business cases</a>
-            </div>
-        </section>
-        
-        <blockquote>“The only way to do great work is to love what you do.” – Steve Jobs</blockquote>
+  <section>
+    <h2>City Design</h2>
+    <ul>
+      <li><strong>Name of the city:</strong> <span>"HAMSAGARH"</span></li>
+      <li>Our city plan for HAMSAGARH, situated in RAJKOT district in GUJART, features a well-rounded and sustainable urban design focusing on infrastructure, public services,monument preservation and environmental conservation.</li>
+      <li>
+        <center>
+          <img src="https://raw.githubusercontent.com/snehalb2005/sneha.github.io/main/images/City.jpeg" alt="City Plan Image" width="80%">
+        </center>
+      </li>
+    </ul>
+    <section class="description">
+      <div class="link-section">
+        <a class="custom-link" href="/sneha.github.io/introduction.html">Click Here to see the course project introduction</a>
+      </div>
     </section>
-    <section>
-        <div>
-            <div>
-                <img src="https://raw.githubusercontent.com/snehalb2005/sneha.github.io/main/images/sneha.jpeg"  class="profile-pic">
-                <p class="name">Sneha L Bagalkot</p>
-                <p>USN: 01FE23BCS174</p>
-                <p>ROLL NO: 240</p> 
-            </div>
-        </div>
+    <section class="description">
+      <div class="link-section">
+        <a class="custom-link" href="/sneha.github.io/blocks/businesscases/business.html">Click Here to see the business cases</a>
+      </div>
     </section>
 
-    
-     <section>
-        <div>
-            <h2 id="meet">Meet My Team 🕵</h2>
+    <blockquote>“The only way to do great work is to love what you do.” – Steve Jobs</blockquote>
+  </section>
+  <section>
+    <div>
+      <div>
+        <img src="https://raw.githubusercontent.com/snehalb2005/sneha.github.io/main/images/sneha.jpeg" class="profile-pic">
+        <p class="name">Sneha L Bagalkot</p>
+        <p>USN: 01FE23BCS174</p>
+        <p>ROLL NO: 240</p>
+      </div>
+    </div>
+  </section>
+
+  <section>
+    <div>
+      <h2 id="meet">Meet My Team 🕵</h2>
+    </div>
+    <div class="team-container">
+      <div class="team-member">
+        <img src="https://raw.githubusercontent.com/snehalb2005/sneha.github.io/main/images/disha.jpeg" alt="Team Member 2" class="profile-pic">
+        <div class="member-info">
+          <p class="name">Disha Sirsikar</p>
+          <p>USN: 01FE23BCS187</p>
+          <div class="center-link">
+            <a href="https://Disha0029.github.io/disha.github.io/">Click Here to visit Disha's GitHub Page</a>
+          </div>
+          <p>ROLL NO: 245</p>
         </div>
-        <div class="team-container">
+      </div>
 
-            <div class="team-member">
-                <img src="https://raw.githubusercontent.com/snehalb2005/sneha.github.io/main/images/disha.jpeg" alt="Team Member 2" class="profile-pic">
-                <div class="member-info">
-                    <p class="name">Disha Sirsikar</p>
-                    <p>USN: 01FE23BCS187</p>
-                      <div class="center-link">
-                          <a href="https://Disha0029.github.io/disha.github.io/">Click Here to visit Disha's GitHub Page</a>
-
-                     </div>
-
-                    <p>ROLL NO: 245</p>
-                </div>
-            </div>
-
-            <div class="team-member">
-                <img src="https://raw.githubusercontent.com/snehalb2005/sneha.github.io/main/images/prateeksha.jpeg" alt="Team Member 3" class="profile-pic">
-                <div class="member-info">
-                    <p class="name">Prateeksha P Shet </p>
-                    <p>USN: 01FE23BCS177</p>
-                       <div class="center-link">
-                          <a href="https://Prateeksha-ps.github.io/prateeksha.github.io/">Click Here to visit Prateeksha's GitHub Page</a>
-                     </div>
-                    <p>ROLL NO: 223</p>
-                </div>
-            </div>
+      <div class="team-member">
+        <img src="https://raw.githubusercontent.com/snehalb2005/sneha.github.io/main/images/prateeksha.jpeg" alt="Team Member 3" class="profile-pic">
+        <div class="member-info">
+          <p class="name">Prateeksha P Shet</p>
+          <p>USN: 01FE23BCS177</p>
+          <div class="center-link">
+            <a href="https://Prateeksha-ps.github.io/prateeksha.github.io/">Click Here to visit Prateeksha's GitHub Page</a>
+          </div>
+          <p>ROLL NO: 223</p>
         </div>
-    </section>
+      </div>
+    </div>
+  </section>
 
 </body>
+
 </html>
