--- a/blocks/learningref/Sneha(240).html
+++ b/blocks/learningref/Sneha(240).html
@@ -133,9 +133,9 @@
 <body>
   <nav class="navbar">
     <ul class="nav-list">
-      <li><a href="/PortfolioDemo.github.io/blocks/home/home.html">Home</a></li>
-      <li><a href="/PortfolioDemo.github.io/index.html">PROJECT OVERVIEW</a></li>
-      <li><a href="/PortfolioDemo.github.io/blocks/learningref/teamlearning.html">Learning Reflections</a></li>
+      <li><a href="/sneha.github.io/blocks/home/home.html">Home</a></li>
+      <li><a href="/sneha.github.io/index.html">PROJECT OVERVIEW</a></li>
+      <li><a href="/sneha.github.io/blocks/learningref/teamlearning.html">Learning Reflections</a></li>
     </ul>
   </nav>
   <section>
