--- a/blocks/learningref/Sneha(240).html
+++ b/blocks/learningref/Sneha(240).html
@@ -199,4 +199,46 @@
 
     <[_{{{CITATION{{{_1{](https://github.com/theresia-alfareja/klinikmagang/tree/76aed476f7260c95ce35a5460fa79498cb876889/akun_pribadi.php)
             
-         <div class="container"> <h1>Algorithm Learning Reflections</h1> <h2>1. How do you determine the most efficient approach when solving a complex problem?</h2> <p>I start by examining the problem's constraints, considering the required performance, and evaluating possible trade-offs. I then assess whether approaches like divide-and-conquer, dynamic programming, or greedy methods fit the problem’s needs.</p> <h2>2. How do you balance multiple conflicting constraints in a design?</h2> <p>My approach is to rank constraints based on their impact on the overall solution. For instance, I may prioritize minimizing time complexity in real-time systems while optimizing memory usage for resource-constrained environments.</p> <h2>3. What criteria do you use to evaluate the effectiveness of a solution?</h2> <p>Effectiveness is measured by factors such as correctness, efficiency, scalability, and simplicity. I also consider the algorithm’s ability to handle edge cases and robustness against invalid inputs.</p> <h2>4. How can you adapt an existing solution to address a new or unforeseen challenge?</h2> <p>By modularizing and generalizing parts of the algorithm, I can reapply them to new problems. For example, I could adapt Dijkstra's algorithm to handle negative edge weights by switching to the Bellman-Ford algorithm.</p> <h2>5. What strategies do you use to identify patterns or structures in datasets or problems?</h2> <p>I analyze the problem for repeating patterns, hierarchical relationships, or connections among data elements. This helps me select the most appropriate algorithm, such as dynamic programming or graph traversal techniques.</p> <h2>6. How do you decide when to prioritize simplicity over optimization in a solution?</h2> <p>I favor simplicity when the problem size is manageable or when optimization doesn't significantly improve performance. As systems grow larger, however, optimization becomes more important.</p> <h2>7. How does breaking down a problem into smaller components help solve it more effectively?</h2> <p>Dividing a problem into manageable components makes it easier to implement and debug. Techniques like divide-and-conquer take advantage of this approach to solve complex problems more efficiently.</p> <h2>8. What trade-offs do you consider when solving problems?</h2> <p>I weigh the trade-offs between time complexity, space usage, simplicity, and maintainability. For example, choosing a hash table for its O(1) access time might increase memory usage.</p> <h2>9. How do you identify and address potential limitations or weaknesses in a proposed solution?</h2> <p>I detect weaknesses through edge case testing, complexity analysis, and code reviews. To improve the solution, I either refine the existing approach or explore alternative methods.</p> <h2>10. How does applying knowledge from one context help solve a problem in another context?</h2> <p>Skills learned in one domain, such as dynamic programming in optimization problems, can be transferred to other areas like machine learning or game theory, providing effective solutions to real-world problems.</p> <h2>11. How do you decide when to innovate versus relying on tried-and-tested solutions?</h2> <p>When established solutions fulfill the problem’s requirements, I stick with them. However, if the challenge is unique or particularly complex, I consider innovation to find more efficient or novel solutions.</p> <button onclick="window.history.back();">Back</button> </div> </body> </html>
+     
+  <div class="container">
+    <h1>Algorithm Learning Reflections</h1>
+
+    <h2>1. How do you determine the most efficient approach when solving a complex problem?</h2>
+    <p>I start by examining the problem's constraints, considering the required performance, and evaluating possible trade-offs. I then assess whether approaches like divide-and-conquer, dynamic programming, or greedy methods fit the problem’s needs.</p>
+
+    <h2>2. How do you balance multiple conflicting constraints in a design?</h2>
+    <p>My approach is to rank constraints based on their impact on the overall solution. For instance, I may prioritize minimizing time complexity in real-time systems while optimizing memory usage for resource-constrained environments.</p>
+
+    <h2>3. What criteria do you use to evaluate the effectiveness of a solution?</h2>
+    <p>Effectiveness is measured by factors such as correctness, efficiency, scalability, and simplicity. I also consider the algorithm’s ability to handle edge cases and robustness against invalid inputs.</p>
+
+    <h2>4. How can you adapt an existing solution to address a new or unforeseen challenge?</h2>
+    <p>By modularizing and generalizing parts of the algorithm, I can reapply them to new problems. For example, I could adapt Dijkstra's algorithm to handle negative edge weights by switching to the Bellman-Ford algorithm.</p>
+
+    <h2>5. What strategies do you use to identify patterns or structures in datasets or problems?</h2>
+    <p>I analyze the problem for repeating patterns, hierarchical relationships, or connections among data elements. This helps me select the most appropriate algorithm, such as dynamic programming or graph traversal techniques.</p>
+
+    <h2>6. How do you decide when to prioritize simplicity over optimization in a solution?</h2>
+    <p>I favor simplicity when the problem size is manageable or when optimization doesn't significantly improve performance. As systems grow larger, however, optimization becomes more important.</p>
+
+    <h2>7. How does breaking down a problem into smaller components help solve it more effectively?</h2>
+    <p>Dividing a problem into manageable components makes it easier to implement and debug. Techniques like divide-and-conquer take advantage of this approach to solve complex problems more efficiently.</p>
+
+    <h2>8. What trade-offs do you consider when solving problems?</h2>
+    <p>I weigh the trade-offs between time complexity, space usage, simplicity, and maintainability. For example, choosing a hash table for its O(1) access time might increase memory usage.</p>
+
+    <h2>9. How do you identify and address potential limitations or weaknesses in a proposed solution?</h2>
+    <p>I detect weaknesses through edge case testing, complexity analysis, and code reviews. To improve the solution, I either refine the existing approach or explore alternative methods.</p>
+
+    <h2>10. How does applying knowledge from one context help solve a problem in another context?</h2>
+    <p>Skills learned in one domain, such as dynamic programming in optimization problems, can be transferred to other areas like machine learning or game theory, providing effective solutions to real-world problems.</p>
+
+    <h2>11. How do you decide when to innovate versus relying on tried-and-tested solutions?</h2>
+    <p>When established solutions fulfill the problem’s requirements, I stick with them. However, if the challenge is unique or particularly complex, I consider innovation to find more efficient or novel solutions.</p>
+
+    <button onclick="window.history.back();">Back</button>
+  </div>
+</body>
+
+</html>
+
