--- a/blocks/businesscases/business.html
+++ b/blocks/businesscases/business.html
@@ -114,7 +114,7 @@
     <nav class="navbar">
         <ul class="nav-list">
             <li><a href="../home/home.html">Home</a></li>
-          
+         <img src="https://raw.githubusercontent.com/snehalb2005/sneha.github.io/main/images/image.jpeg" alt="PROBLEM DOMAIN" class="Optimising tourism services in a smart city"> 
         </ul>
     </nav>
 
